force-app/main/default/objects/Objects_to_Clean__mdt/Objects_to_Clean__mdt.object-meta.xml
<CustomObject>
    <description>Deletes and summarizes records older than X months from these objects</description>
    <label>Objects to Clean</label>
    <pluralLabel>Objects to Clean</pluralLabel>
</CustomObject>