force-app/main/default/objects/Objects_to_Clean__mdt/fields/DeleteOldRecords__c.field-meta.xml
<CustomField>
    <fullName>DeleteOldRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Old Records</label>
    <type>Checkbox</type>
</CustomField>