force-app/main/default/objects/Objects_to_Clean__mdt/fields/MonthsDataShouldGoBack__c.field-meta.xml
<CustomField>
    <fullName>MonthsDataShouldGoBack__c</fullName>
    <description>How many months should the data go back? Example: if the value is 3, records created in the last 3 months will be kept.</description>
    <inlineHelpText>How many months should the data go back? Example: if the value is 3, records created in the last 3 months will be kept.</inlineHelpText>
    <label>Months Data Should Go Back</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>