force-app/main/default/objects/Objects_to_Clean__mdt/fields/OverrideStartDate__c.field-meta.xml
<CustomField>
    <fullName>OverrideStartDate__c</fullName>
    <description>Use this if you do not want the process to start from today. It will then rather go back X months from the specified date</description>
    <inlineHelpText>The process will use this date instead of today&apos;s date (if filled out)</inlineHelpText>
    <label>Override Start Date</label>
    <type>Date</type>
</CustomField>