force-app/main/default/objects/Objects_to_Clean__mdt/fields/WhereClause__c.field-meta.xml
<CustomField>
    <fullName>WhereClause__c</fullName>
    <inlineHelpText>Where clause for the query if needed</inlineHelpText>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>